update the parser with newspaper3k

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>NewsCentral</title>
     <p>Provide a file with domains to scrape. refer to <a href="/test.txt">testfile</a> for format.enter comma seperated URL for news portals</p>
-    <p>only https://timesofindia.indiatimes.com,https://in.reuters.com, https://in.finance.yahoo.com supported</p>
     <form action="/" method="POST" enctype=multipart/form-data>
         <div>
             <input type="file" name="linksfile">
@@ -12,8 +11,7 @@
         <br/>
         <div>
             <textarea name="links"
-                  placeholder="https://timesofindia.indiatimes.com,https://in.reuters.com, https://in.finance.yahoo.com
-                  supported only"></textarea>
+                  placeholder="https://timesofindia.indiatimes.com,https://in.reuters.com, https://in.finance.yahoo.com"></textarea>
         </div>
         <br/>
         <div>
